# backtesting-engine

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  RESULTS.md  dashboard_ma.html  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  methodology.md  performance.md  reproducibility.md
src/backtesting_engine/: __init__.py  benchmark.py  config.py  dashboard.py  execution.py  main.py  metrics.py  models.py  multi_asset.py  reality_check.py  simulator.py  summary.py  visualisation.py  walk_forward.py
src/backtesting_engine/data/: ingestion.py  validator.py
src/backtesting_engine/strategy/: __init__.py  base.py  kalman_filter.py  momentum.py  moving_average.py
tests/: conftest.py  helpers.py  test_benchmark.py  test_calman.py  test_cli.py  test_correctness_invariants.py  test_dashboard.py  test_execution.py  test_final_fixes.py  test_fixes.py  test_integration.py  test_kalman.py  test_metrics.py  test_momentum.py  test_multi_asset.py  test_reality_check.py  test_simulator.py  test_strategy.py  test_summary.py  test_trade_diagnostics.py  test_walk_forward.py
tests/test_data/: test_ingestion.py  test_validator.py
