[project]
name = "backtesting-engine"
version = "0.1.0"
description = ""
authors = [
    {name = "Bonnie McConnell",email = "bonniep.mcconnell@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yfinance (>=1.2.0,<2.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "numpy (>=2.4.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "backtesting_engine", from = "src"}]

[tool.poetry.scripts]
backtesting-engine = "backtesting_engine.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
