[project]
name = "backtesting-engine"
version = "0.5.5"
description = "Walk-forward backtesting with Kalman filter, White's Reality Check, and interactive dashboards"
authors = [
    {name = "Bonnie McConnell", email = "bonniep.mcconnell@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yfinance (>=0.2.0,<2.0.0)",
    "pandas (>=2.0.0,<4.0.0)",
    "numpy (>=1.24.0,<3.0.0)",
    "scipy (>=1.10.0,<2.0.0)",
    "plotly (>=5.0.0,<6.0.0)",
]

[tool.poetry]
packages = [{include = "backtesting_engine", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0,<11.0.0"
mypy = ">=1.0.0,<2.0.0"
ruff = ">=0.1.0,<1.0.0"

[tool.poetry.scripts]
backtesting-engine = "backtesting_engine.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
addopts = "-m 'not network'"
markers = [
    "network: marks tests that require network access (deselect with '-m not network')",
]
filterwarnings = [
    "ignore::RuntimeWarning:numpy",
    "ignore::DeprecationWarning:yfinance",
    "ignore::FutureWarning",
]

[tool.mypy]
strict = true
python_version = "3.11"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"